--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1178,10 +1178,6 @@ html.right-expanded-cover.buddyfeed-visible .main-coverSlotExpanded-container {
     background-color: spiceColor("selected-row", 0.3);
 }
 
-.bookmark-filter {
-    color: spiceColor(main) !important;
-}
-
 /* 1.1.56 */
 .main-navBar-navBar {
     width: var(--sidebar-width) !important;
